add site header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,38 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <header class="site-header">
+    <nav class="navbar navbar-expand-md site-nav">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img class="img-fluid" src="./img/logo.svg" alt="logo img" width="139" height="20">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse site-nav__list--wrapper" id="navbarSupportedContent">
+          <ul class="navbar-nav site-nav__list">
+            <li class="nav-item site-nav__item">
+              <a class="nav-link p-0 site-nav__link" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item site-nav__item">
+              <a class="nav-link p-0 site-nav__link" href="#">About</a>
+            </li>
+            <li class="nav-item site-nav__item">
+              <a class="nav-link p-0 site-nav__link" href="#">Contact</a>
+            </li>
+            <li class="nav-item site-nav__item">
+              <a class="nav-link p-0 site-nav__link" href="#">Blog</a>
+            </li>
+            <li class="nav-item site-nav__item">
+              <a class="nav-link p-0 site-nav__link" href="#">Careers</a>
+            </li>
+          </ul>
+        </div>
+        <a href="#" class="request__button">Request Invite</a>
+      </div>
+    </nav>
+  </header>
 
 
 
