--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+  <!-- HEADER  -->
   <header class="site-header">
     <nav class="navbar navbar-expand-md site-nav">
       <div class="container site-nav-container">
@@ -42,11 +43,13 @@
       </div>
     </nav>
   </header>
+  <!-- HEADER END  -->
 
+  <!-- HERO  -->
   <div class="hero">
     <div class="container-fluid container-md">
       <div class="row align-items-md-center justify-content-center justify-content-md-start">
-        <div class="col-12 col-sm-9 col-md-6 text-center text-md-start">
+        <div class="col-12 col-sm-9 col-md-6 text-center text-md-start mb-5 mb-lg-0">
           <h1 class="hero__title">Next generation
             digital banking</h1>
           <p class="hero__text">Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
@@ -62,8 +65,153 @@
       </div>
     </div>
   </div>
+  <!-- HERO END  -->
 
+  <!-- MAIN  -->
+  <main class="site-main">
+    <!-- easybank  -->
+    <section class="easybank">
+      <div class="container easybank__container">
+        <div class="row easybank__section-heading justify-content-center justify-content-lg-start">
+          <div class="col-11 col-md-10 col-lg-7 text-center text-lg-start">
+            <h2 class="easbank__heading">Why choose Easybank?</h2>
+            <p class="easybank__info">
+              We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.
+            </p>
+          </div>
+        </div>
+        <div class="row easybank__row justify-content-center justify-content-md-between">
+          <div class="col-12 col-sm-8 col-md-6 col-lg-3 text-center text-md-start mb-5 mb-lg-0 easybank__item easybank__item--bank">
+            <h3 class="easybank__title">Online Banking</h3>
+            <p class="easybank__text">
+              Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.
+            </p>
+          </div>
+          <div class="col-12 col-sm-8 col-md-6 col-lg-3 text-center text-md-start mb-5 mb-lg-0 easybank__item easybank__item--budget">
+            <h3 class="easybank__title">Simple Budgeting</h3>
+            <p class="easybank__text">
+              See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.
+            </p>
+          </div>
+          <div class="col-12 col-sm-8 col-md-6 col-lg-3 text-center text-md-start mb-5 mb-lg-0 easybank__item easybank__item--onboard">
+            <h3 class="easybank__title">Fast Onboarding</h3>
+            <p class="easybank__text">
+              We don’t do branches. Open your account in minutes online and start taking control of your finances right away.
+            </p>
+          </div>
+          <div class="col-12 col-sm-8 col-md-6 col-lg-3 text-center text-md-start mb-5 mb-lg-0 easybank__item easybank__item--api">
+            <h3 class="easybank__title">Open API</h3>
+            <p class="easybank__text">Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- easybank end  -->
 
+    <!-- articles  -->
+    <section class="articles">
+      <div class="container articles__container">
+        <div class="row articles__section-heading justify-content-center justify-content-lg-start">
+          <div class="col-11 col-md-10 col-lg-7 text-center text-lg-start">
+            <h2 class="articles__heading">Latest Articles</h2>
+          </div>
+        </div>
+        <div class="row articles__row justify-content-center justify-content-md-between">
+          <div class="col-12 col-sm-8 col-md-6 col-lg-3 mb-5 mb-lg-0 articles__item">
+            <div class="card">
+              <img src="./img/money.png" class="card-img-top" alt="By Claire Robinson">
+              <div class="card-body">
+                <span class="article-owner">By Claire Robinson</span>
+                <h3 class="card-title">Receive money in any currency with no fees</h3>
+                <p class="card-text">The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-sm-8 col-md-6 col-lg-3 mb-5 mb-lg-0 articles__item">
+            <div class="card">
+              <img src="./img/treat.png" class="card-img-top" alt="By Wilson Hutton">
+              <div class="card-body">
+                <span class="article-owner">By Wilson Hutton</span>
+                <h3 class="card-title">Treat yourself without worrying about money</h3>
+                <p class="card-text">Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-sm-8 col-md-6 col-lg-3 mb-5 mb-lg-0 articles__item">
+            <div class="card">
+              <img src="./img/hunton.png" class="card-img-top" alt="By Wilson Hutton">
+              <div class="card-body">
+                <span class="article-owner">By Wilson Hutton</span>
+                <h3 class="card-title">Take your Easybank card wherever you go</h3>
+                <p class="card-text">We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-sm-8 col-md-6 col-lg-3 mb-5 mb-lg-0 articles__item">
+            <div class="card">
+              <img src="./img/beta.png" class="card-img-top" alt="By Claire Robinson">
+              <div class="card-body">
+                <span class="article-owner">By Claire Robinson</span>
+                <h3 class="card-title">Our invite-only Beta accounts are now live!</h3>
+                <p class="card-text">After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- articles end  -->
+
+  </main>
+  <!-- MAIN END  -->
+
+  <!-- FOOTER  -->
+  <footer class="site-footer">
+    <div class="container site-footer__container">
+      <div class="row site-footer__row justify-content-center">
+        <div class="col-12 col-sm-9 col-md-6 col-lg-3 order-lg-1 order-md-1 align-items-center align-items-lg-start justify-content-between d-flex flex-column mb-4 mb-lg-0">
+          <a class="logo inline-block" href="#">
+            <img src="./img/footer-logo.png" alt="footer logo img"  width="139" height="20">
+          </a>
+          <div class="social-networs">
+            <a href="#" class="social-network">
+              <img src="./img/facebook.svg" alt="facebook" width="20" height="20">
+            </a>
+            <a href="#" class="social-network">
+              <img src="./img/youtube.svg" alt="youtube" width="20" height="20">
+            </a>
+            <a href="#" class="social-network">
+              <img src="./img/twitter.svg" alt="twitter" width="20" height="20">
+            </a>
+            <a href="#" class="social-network">
+              <img src="./img/pinterest.svg" alt="pinterest" width="20" height="20">
+            </a>
+            <a href="#" class="social-network">
+              <img src="./img/instagram.svg" alt="instagram" width="20" height="20">
+            </a>
+          </div>
+        </div>
+        <div class="col-12 col-sm-9 col-md-6 col-lg-3 order-lg-2 order-md-3 align-items-center align-items-lg-start d-flex flex-column mb-md-4 mb-lg-0">
+          <a class="site-footer__nav-link" href="#">About Us</a>
+          <a class="site-footer__nav-link" href="#">Contact</a>
+          <a class="site-footer__nav-link" href="#">Blog</a>
+        </div>
+        <div class="col-12 col-sm-9 col-md-6 col-lg-2 order-lg-3 order-md-4 align-items-center align-items-lg-start d-flex flex-column mb-4 mb-md-0">
+          <a class="site-footer__nav-link" href="#">Careers</a>
+          <a class="site-footer__nav-link" href="#">Support</a>
+          <a class="site-footer__nav-link" href="#">Privacy Policy</a>
+        </div>
+        <div class="col-12 col-sm-9 col-md-6 col-lg-4 order-lg-4 order-md-2 align-items-center align-items-lg-end justify-content-between d-flex flex-column  mb-md-4 mb-lg-0 ">
+          <a class="request__button site-footer__button" href="#">Request Invite</a>
+          <p class="site-footer-made">© Easybank. All Rights Reserved</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- FOOTER END  -->
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
