--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Easybank</title>
   <link rel="stylesheet" href="css/normalize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -17,28 +18,35 @@
         <a class="navbar-brand" href="#">
           <img class="img-fluid" src="./img/logo.svg" alt="logo img" width="139" height="20">
         </a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse site-nav__list--wrapper" id="navbarSupportedContent">
           <ul class="navbar-nav align-items-center site-nav__list">
             <li class="nav-item site-nav__item">
               <a class="nav-link p-0 site-nav__link" aria-current="page" href="#">Home</a>
             </li>
+
             <li class="nav-item site-nav__item">
               <a class="nav-link p-0 site-nav__link" href="#">About</a>
             </li>
+
             <li class="nav-item site-nav__item">
               <a class="nav-link p-0 site-nav__link" href="#">Contact</a>
             </li>
+
             <li class="nav-item site-nav__item">
               <a class="nav-link p-0 site-nav__link" href="#">Blog</a>
             </li>
+            
             <li class="nav-item site-nav__item">
               <a class="nav-link p-0 site-nav__link" href="#">Careers</a>
             </li>
           </ul>
         </div>
+
         <a href="#" class="request__button d-none d-md-block">Request Invite</a>
       </div>
     </nav>
@@ -49,12 +57,14 @@
   <div class="hero">
     <div class="container-fluid container-md">
       <div class="row align-items-md-center justify-content-center justify-content-md-start">
+
         <div class="col-12 col-sm-9 col-md-6 text-center text-md-start mb-5 mb-lg-0">
           <h1 class="hero__title">Next generation
             digital banking</h1>
           <p class="hero__text">Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
           <a href="#" class="request__button d-inline-block">Request Invite</a>
         </div>
+
         <div class="col-12 col-md-6 hero-img">
           <img class="img-fluid d-none d-md-block" src="./img/hero-bg-img.png" alt="hero img">
 
@@ -62,6 +72,7 @@
 
           <img class="img-fluid d-block d-sm-none" src="./img/phones-mobile.png" alt="hero img">
         </div>
+
       </div>
     </div>
   </div>
@@ -87,18 +98,21 @@
               Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.
             </p>
           </div>
+
           <div class="col-12 col-sm-8 col-md-6 col-lg-3 text-center text-md-start mb-5 mb-lg-0 easybank__item easybank__item--budget">
             <h3 class="easybank__title">Simple Budgeting</h3>
             <p class="easybank__text">
               See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.
             </p>
           </div>
+
           <div class="col-12 col-sm-8 col-md-6 col-lg-3 text-center text-md-start mb-5 mb-lg-0 easybank__item easybank__item--onboard">
             <h3 class="easybank__title">Fast Onboarding</h3>
             <p class="easybank__text">
               We don’t do branches. Open your account in minutes online and start taking control of your finances right away.
             </p>
           </div>
+
           <div class="col-12 col-sm-8 col-md-6 col-lg-3 text-center text-md-start mb-5 mb-lg-0 easybank__item easybank__item--api">
             <h3 class="easybank__title">Open API</h3>
             <p class="easybank__text">Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
@@ -164,7 +178,6 @@
       </div>
     </section>
     <!-- articles end  -->
-
   </main>
   <!-- MAIN END  -->
 
@@ -178,32 +191,39 @@
           </a>
           <div class="social-networs">
             <a href="#" class="social-network">
-              <img src="./img/facebook.svg" alt="facebook" width="20" height="20">
+              <i class="fab fa-facebook-square"></i>
             </a>
+
             <a href="#" class="social-network">
-              <img src="./img/youtube.svg" alt="youtube" width="20" height="20">
+              <i class="fab fa-youtube"></i>
             </a>
+
             <a href="#" class="social-network">
-              <img src="./img/twitter.svg" alt="twitter" width="20" height="20">
+              <i class="fab fa-twitter"></i>
             </a>
+
             <a href="#" class="social-network">
-              <img src="./img/pinterest.svg" alt="pinterest" width="20" height="20">
+              <i class="fab fa-pinterest"></i>
             </a>
+
             <a href="#" class="social-network">
-              <img src="./img/instagram.svg" alt="instagram" width="20" height="20">
+              <i class="fab fa-instagram"></i>
             </a>
           </div>
         </div>
+
         <div class="col-12 col-sm-9 col-md-6 col-lg-3 order-lg-2 order-md-3 align-items-center align-items-lg-start d-flex flex-column mb-md-4 mb-lg-0">
           <a class="site-footer__nav-link" href="#">About Us</a>
           <a class="site-footer__nav-link" href="#">Contact</a>
           <a class="site-footer__nav-link" href="#">Blog</a>
         </div>
+
         <div class="col-12 col-sm-9 col-md-6 col-lg-2 order-lg-3 order-md-4 align-items-center align-items-lg-start d-flex flex-column mb-4 mb-md-0">
           <a class="site-footer__nav-link" href="#">Careers</a>
           <a class="site-footer__nav-link" href="#">Support</a>
           <a class="site-footer__nav-link" href="#">Privacy Policy</a>
         </div>
+        
         <div class="col-12 col-sm-9 col-md-6 col-lg-4 order-lg-4 order-md-2 align-items-center align-items-lg-end justify-content-between d-flex flex-column  mb-md-4 mb-lg-0 ">
           <a class="request__button site-footer__button" href="#">Request Invite</a>
           <p class="site-footer-made">© Easybank. All Rights Reserved</p>
@@ -212,7 +232,6 @@
     </div>
   </footer>
   <!-- FOOTER END  -->
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
